--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ html{
     background-color: #fcea8f;
 }
 
+h1, h2, h3, p{
+    margin: 0;
+}
+
 .NavBar{
     display: flex;
     align-items: flex-start;
@@ -82,6 +86,33 @@ html{
 .icon--about:hover{
     color: #94d6fa;
     background-color: #08415f;
+}
+
+.Event--Category-Div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.Event--Category{
+    margin: 20px;
+    font-family: 'Assistant', sans-serif;
+}
+
+.Event--Category > h3{
+    font-style: italic;
+    font-weight: 600;
+}
+
+.Event--Category > h1{
+    color: #6748C1;
+    font-weight: 800;
+    cursor: pointer;
+}
+
+.Event--Category > h1:hover{
+    color: #b73ce7;
 }
 
 .Event{
@@ -244,4 +275,8 @@ html{
 .icon--calendar{
     background-color: white;
     color: #51C156;
+}
+
+.eventStatus{
+    margin-top: 3%;
 }
