--- a/src/App.css
+++ b/src/App.css
@@ -220,6 +220,7 @@ h1, h2, h3, p{
     font-family: 'Assistant', sans-serif;
     font-weight: 800;
     color: #D92F58;
+    margin-top: 3%;
 }
 
 .EventPageItem{
@@ -277,6 +278,35 @@ h1, h2, h3, p{
     color: #51C156;
 }
 
-.eventStatus{
-    margin-top: 3%;
+.AboutPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+
+.AboutDiv{
+    background-color: #D92F58;
+    color: white;
+
+    padding-inline: 3%;
+    padding-block: 1.5%;
+    border-radius: 10px;
+    text-align: center;
+    font-family: "Assistant", sans-serif;
+}
+
+.AboutDiv > p{
+    margin: 10px;
+    font-weight: 400;
+}
+
+.AboutIcon {
+    font-size: 2.5em;
+    color: white;
+    padding-inline: 10px;
+}
+
+.AboutIcon:hover{
+    color: rgb(102, 8, 8)
 }
